# resins

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  README.md  pyproject.toml  tox.ini
.github/workflows/: build_docs.yml  publish.yml  run_tests.yml  validate_data.yml
dev/: generate_figures.py  validate_data_file.py
dev/plotting/: plot_pychop.py
docs/: requirements.txt
docs/source/: conf.py  howto.rst  index.rst  installation.rst  instruments.rst  quickstart.rst  tutorials.rst
docs/source/_ext/: generate_instrument_docs.py
docs/source/api/: instrument.rst  models.rst
docs/source/dev/: model_base.rst  yaml_spec.rst
docs/source/howtos/: add_instrument.rst  add_model.rst  add_version.rst  get_resolution_function.rst  optimise_experiment.rst  programmatic_query.rst
docs/source/instruments/: ideal.rst
src/resins/: __init__.py  _version.py  instrument.py
src/resins/instrument_data/: ideal.yaml  tosca.yaml
src/resins/models/: __init__.py  ideal.py  lookuptables.py  mixins.py  model_base.py
src/resolution_functions/: instrument.py
src/resolution_functions/instrument_data/: arcs.yaml  cncs.yaml  ideal.yaml  panther.yaml  sequoia.yaml  tosca.yaml  tosca_perrichon2022_v1.npz  vision.yaml
src/resolution_functions/models/: __init__.py  ideal.py  lookuptables.py  mixins.py  model_base.py  panther_abins.py  polynomial.py  pychop.py  tosca_book.py  vision_paper.py
tests/: requirements.txt
tests/comparison_tests/integration_tests/: test_lagrange.py  test_panther.py  test_pychop.py  test_tosca.py
tests/comparison_tests/unit_tests/: test_pychop.py
tests/unit_tests/: fake_instrument.yaml  test_ideal_instrument.py  test_instrument.py  test_mixins.py  test_model_base.py
tests/unit_tests/data/: _convolve_simple.npy  _get_kernel_gaussian1d.npy  (+1 more)
(+22 files in other folders)
