[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = 'resins'
version = "0.1.0"
authors = [
    {name = "Rastislav Turanyi", email = "rastislav.turanyi@stfc.ac.uk"},
]
maintainers = [
    {name = "Rastislav Turanyi", email = "rastislav.turanyi@stfc.ac.uk"},
]
description = "Python library for working with resolution functions of neutron instruments "
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

keywords = [
    "Python",
    "physics",
    "inelastic neutron scattering",
    "instrument resolution",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Physics",
]

requires-python = ">=3.11"

dependencies = [
    "PyYAML >= 6.0.2",
    "numpy >= 2.1.0",
    "scipy >= 1.13.1",
    "typing_extensions >= 4.5.0",
]

[project.optional-dependencies]
dev = [
    "Pint >= 0.24.3",
    "jaxtyping >= 0.2.34"
]
test = [
    "pytest >= 8.3.2",
    "mantid >= 6.14.0",
    "pychop @ git+https://github.com/mducle/pychop.git",
    "more_itertools >= 10.5.0",
    "pytest-mock >= 3.14.0",
]
docs = [
    "sphinx >= 8.1.3",
    "numpydoc >= 1.8.0",
    "inline_reference",
    "sphinx_parsed_codeblock @ git+https://github.com/RastislavTuranyi/sphinx_parsed_codeblock.git",
    "sphinx_rtd_theme >= 3.0.2",
]

[project.urls]
Repository = "https://github.com/pace-neutrons/resins"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where =  ["src"]

[tool.setuptools.package-data]
resins = ["instrument_data/*.yaml"]
